# tsunami_master

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ItemGroup.qml  Main.qml  README.md  TsunamiMaster.pro  app.pri  bitbucket-pipelines.yml  common.pri  lib.pri  main.cpp  qml.qrc
cmake/: debug.cmake
data/: double_brick_10mup.txt  focus.txt  mareographs.mrg  mareographsTest.mrg
docs/: dfScheme23.docx
include/HDlib/: MapArea.h  MapAreaWorker.h  common.h
include/PlotLib/: ColorMap.h  Plot2d.h
include/TMlib/: Operators.h  TMBlock.h  TMBrickPoint.h  TMBrickUp.h  TMCommon.h  TMConstants.h  TMCoordinateIterator.h  TMException.h  TMFocus.h  TMHelpers.h  TMKolchSchema.h  TMKolchScheme.h  TMMapArea.h  TMMapAreaWorker.h  TMMapAreaWorkerGroundswell.h  TMMareograph.h  TMOperators.h  TMOperators.hpp  TMRectangleCoordinateIterator.h  TMRectangleMapArea.h  TMScheme.h  TMScheme23.h  TMScheme24.h  TMSchemeGroundswell.h  TMSchemeLandSearch.h  TMSignal.h  TMTimeManager.h  block.h  brick_point.h  brick_up.h  common.h  constants.h  exception.h  focus.h  helpers.h  kolch_scheme.h  map_area_worker.h  mareograph.h  operators.hpp  scheme.h  (+1 more)
include/TMlib/needed/: TMKolchScheme.h  TMMapAreaWorker.h  TMMareograph.h  TMScheme.h  TMScheme24.h
include/TsunamiManager/: MapData.h  TsunamiData.h  TsunamiManager.h  TsunamiPlotData.h  TsunamiPlotProvider.h  TsunamiWorker.h
samples/: CMakeLists.txt  samples.pro
samples/scheme23sample/: CMakeLists.txt  main.cpp
samples/using_iterators/: CMakeLists.txt  main.cpp
scripts/: tests_bat.py
src/: CMakeLists.txt
src/GUI/: ApplicationGUI.cpp  ApplicationGUI.h  CMakeLists.txt  SourceGUI.cpp  SourceGUI.h  main.cpp  qml.qrc
src/GUI/Resources/: ItemGroup.qml  Main.qml  MapData.qml  TabBarItem.qml
src/GUI/Resources/Common/InstrumentPanel/: ItemColumn.qml  OpenDatFile.qml
src/GUI/Resources/Common/InstrumentPanel/Assets/: Thumbs.db  start.pdn
src/GUI/Resources/InstrumentPanel/: InstrumentPanel.qml  OpenDatFile.qml
src/GUI/Resources/MainPage/: EditData.qml  InstrumentPanel.qml  ItemGroup.qml  MainPage.qml  MapData.qml  PathsWindow.qml
src/GUI/Resources/MainPage/Assets/: Thumbs.db
src/GUI/Resources/TsunamiPage/: ColorBar.qml  DynamicItem.qml  InstrumentPanel.qml  TsunamiAreaItem.qml  TsunamiPage.qml
src/GUI/Resources/TsunamiPage/Assets/: Thumbs.db
src/Gui/: ApplicationGUI.cpp  ApplicationGUI.h  MapData.cpp  MapData.h  SourceGUI.cpp  SourceGUI.h
src/Gui/Resources/: Main.qml  MainPage.qml  MapData.qml
src/Gui/Resources/InstrumentPanel/: InstrumentPanel.qml  ItemColumn.qml
src/HDlib/: HDlib.pro  MapArea.cpp  MapAreaWorker.cpp  common.cpp
src/PlotLib/: CMakeLists.txt  ColorMap.cpp  Plot2d.cpp  PlotLib.pro
src/TMlib/: CMakeLists.txt  Operators.cpp  TMBlock.cpp  TMBrickPoint.cpp  TMBrickUp.cpp  TMCommon.cpp  TMException.cpp  TMFocus.cpp  TMHelpers.cpp  TMKolchSchema.cpp  TMKolchScheme.cpp  TMMapArea.cpp  TMMapAreaWorker.cpp  TMMapAreaWorkerGroundswell.cpp  TMMareograph.cpp  TMOperators.cpp  TMRectangleCoordinateIterator.cpp  TMRectangleMapArea.cpp  TMScheme.cpp  TMScheme23.cpp  TMScheme24.cpp  TMSchemeGroundswell.cpp  TMSchemeLandSearch.cpp  TMSignal.cpp  TMTimeManager.cpp  TMlib.pro  block.cpp  brick_point.cpp  brick_up.cpp  common.cpp  exception.cpp  focus.cpp  helpers.cpp  kolch_scheme.cpp  map_area.cpp  map_area_worker.cpp  mareograph.cpp  operators.cpp  scheme.cpp  scheme23.cpp
src/TMlib/needed/: TMKolchScheme.cpp  TMMapAreaWorker.cpp  TMScheme24.cpp
src/TsunamiManager/: CMakeLists.txt  MapData.cpp  TsunamiData.cpp  TsunamiManager.cpp  TsunamiManager.pro  TsunamiPlotData.cpp  TsunamiPlotProvider.cpp  TsunamiWorker.cpp
src/calclib/: calclib.pro  common.cpp
src/gui/: .qmake.stash  MainPage.qml  gui.pro  main.cpp  qml.qrc
tests/: CMakeLists.txt  TMKolchSchemeTests.cpp  TMMapAreaTests.cpp  TMMapAreaTests.h  TMScheme24Tests.cpp  TestCommon.cpp  TestCommon.h  common_test.cpp  common_test.h  gtest_dependency.pri  tests.pro
tests/TMLibTests/: CMakeLists.txt  TMBOperatorsTests.cpp  TMBlockTests.cpp  TMBrickPointTests.cpp  TMLibTests.pro  TMScheme23Tests.cpp
tests/TestsCommon/: TestCommon.h
